-- Limpa as tabelas antigas se elas existirem, para evitar erros na recriação.
DROP TABLE IF EXISTS DadosColetados, Missao, Checklist, Drone, AreaAgricola, Usuario;

-- Tabela Usuario: Agora com uma coluna "tipo" para diferenciar Administradores de Operadores.
-- Esta é uma forma de implementar herança em um banco de dados (Tabela Única).
CREATE TABLE Usuario (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nome VARCHAR(255) NOT NULL,
    login VARCHAR(120) NOT NULL UNIQUE,
    senhaHash VARCHAR(255) NOT NULL,
    tipo VARCHAR(32) NOT NULL CHECK (tipo IN ('ADMINISTRADOR', 'OPERADOR')) -- Coluna Discriminador
);

-- Tabela para armazenar as áreas agrícolas que serão monitoradas
CREATE TABLE AreaAgricola (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    localizacao VARCHAR(255) NOT NULL,
    tamanho DOUBLE PRECISION,
    tipoCultivo VARCHAR(80)
);

-- Tabela para armazenar as informações dos drones
CREATE TABLE Drone (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    modelo VARCHAR(120) NOT NULL,
    status VARCHAR(32) NOT NULL CHECK (status IN ('DISPONIVEL', 'EM_MISSAO', 'EM_MANUTENCAO'))
);

-- Tabela Checklist: A nova entidade para validações pré-voo.
CREATE TABLE Checklist (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nivelBateria INT NOT NULL,
    sensoresOk BOOLEAN NOT NULL,
    conexaoRedeOk BOOLEAN NOT NULL,
    dataValidacao TIMESTAMP NOT NULL
);

-- Tabela principal que agenda e gerencia as missões
CREATE TABLE Missao (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    dataHora TIMESTAMP NOT NULL,
    status VARCHAR(32) NOT NULL CHECK (status IN ('AGENDADA', 'EM_ANDAMENTO', 'CONCLUIDA', 'CANCELADA')),
    
    -- Chaves Estrangeiras para criar os relacionamentos
    id_area BIGINT NOT NULL,
    id_drone BIGINT NOT NULL,
    id_operador BIGINT NOT NULL,
    id_checklist BIGINT NOT NULL UNIQUE, -- Uma missão tem um, e apenas um, checklist.

    FOREIGN KEY (id_area) REFERENCES AreaAgricola(id),
    FOREIGN KEY (id_drone) REFERENCES Drone(id),
    FOREIGN KEY (id_operador) REFERENCES Usuario(id),
    FOREIGN KEY (id_checklist) REFERENCES Checklist(id)
);

-- Tabela para armazenar os dados coletados durante uma missão
CREATE TABLE DadosColetados (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    imagem BYTEA,
    temperatura DOUBLE PRECISION,
    umidade DOUBLE PRECISION,
    pragas VARCHAR(255),
    dataHora TIMESTAMP NOT NULL,
    
    -- Chave Estrangeira para relacionar os dados à sua missão
    id_missao BIGINT NOT NULL,
    
    FOREIGN KEY (id_missao) REFERENCES Missao(id)
);
